2005-07-08  Sven Neumann  <sven@gimp.org>

	* app/base/segmentator.c: minor cleanup, use a GQueue instead of a
	custom queue implementation.

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcursorview.c (gimp_cursor_view_update_cursor):
	pass the color index value to gimp_color_frame_set_color() so it
	would show up in the frame if we actually picked from indexed
	things.

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpclonetool.c: initialize the parent_class pointer
	with NULL.

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_new): enable
	remote files: set local_only to FALSE if the PDB has
	"file_uri_load/save" procedures (yes, this is questionable).

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* libgimpcolor/gimpbilinear.c
	* libgimpwidgets/gimppreviewarea.c: fix some uninitialized stuff
	gcc 4.0 was choking about.

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimppageselector.c (gimp_page_selector_class_init):
	added and fixed some API docs.

2005-07-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/ifscompose/ifscompose.c: fixed spelling of Fractal.

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpwidgets.h: include gimpscrolledpreview.h

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* app/actions/edit-commands.c
	* app/actions/tool-options-commands.c: made the "Reset all tool
	options" and "Clear undo history" dialogs modal and simplified the
	code to use gimp_dialog_run() instead of a separate callback
	function.

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimppageselector.[ch]: moved all instance members
	to a private struct.

2005-07-08  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimppageselector.[ch]: fixed horizontal layout to
	not always use multiples of the default item width. Use the
	maximum thumbnail icon width instead. Also fixes keynav since it